projectcard: remove fixed height
The fixed height causes elements to move out of box when switching to smaller screens

--- a/src/components/dashboard/MentorDashboard/MentorDashboard.scss
+++ b/src/components/dashboard/MentorDashboard/MentorDashboard.scss
@@ -36,7 +36,7 @@ $button-color: black;
     -webkit-box-sizing: border-box;
 
     width: 1200px;
-    height: 200px;
+    // height: 200px;
 
     // margin: 1%;
     border: 10px dashed #5f6e7d;
